--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "webpack": "^5.97.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +46,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "engines": {
-    "node": "16.x"
+    "node": "22.x"
   }
 }
